# python-microservices

./: README.md  Tiltfile
cleaning/: log_conf.yaml  pyproject.toml  start-debug.sh  start-worker-debug.sh  start-worker.sh  start.sh  worker.Dockerfile
cleaning/cleaning/: database.py  main.py  models.py  tracing.py  worker.py
cleaning/cleaning/api/: days.py
deploy/: cleaning.yaml  cleaning_worker.yaml  dispo.yaml  jaeger.yaml  postgres.yaml  prometheus.yaml  rabbitmq.yaml
dispo/: Dockerfile  pyproject.toml  start-debug.sh  start.sh
dispo/dispo/: database.py  main.py  models.py  tasks.py
dispo/dispo/api/: booking.py  room.py
dispo/tests/: test_booking.py  test_room.py
docs/: lession1.md  lession10.md  lession11.md  lession12.md  lession2.md  lession3.md  lession4.md  lession5.md  lession6.md  lession7.md  lession8.md  lession9.md
mypostgres/: create_users.sql
myprometheus/: prometheus.yml
wrk/: post.lua
