[tool.poetry]
name = "cleaning"
version = "0.1.0"
description = ""
authors = ["Norbert Ferchen <nferchen@consol.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
debugpy = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
