[tool.poetry]
name = "dispo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standart"], version = "^0.27.0.post1"}
pyyaml = "^6.0.1"
debugpy = "^1.8.0"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
celery = "^5.3.6"
prometheus-fastapi-instrumentator = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
celery-types = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
